스카인포앱 디자인 수정

--- a/scainfoapp/static/css/detail.css
+++ b/scainfoapp/static/css/detail.css
@@ -63,7 +63,7 @@ hr{
   margin-bottom: 0;
 }
 
-h2 { text-align: center; }
+/* h2 { text-align: center; } */
 
 /* .imgbox{
     text-align: center;
