--- a/scainfoapp/templates/scainfoapp/like.html
+++ b/scainfoapp/templates/scainfoapp/like.html
@@ -2,8 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,
-    initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>찜한 스터디카페 목록</title>
         <link rel="stylesheet" href='/static/css/home.css'>
         <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
@@ -11,105 +10,115 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     </head>
     <body>
-        <div class="home">
-        <a href="/"><img class="homebtn" src="/static/images/homebtn.png"/></a></div>
-        <h2 style="text-align: center;">찜한 스터디카페 목록</h2>
-        {% comment %} <div class="sort" align="right">
-        <select title="" onchange="window.location.href=this.value">
-            <option value="http://127.0.0.1:8000/scainfo/all/" selected>기본 순</option>
-            <option value="http://127.0.0.1:8000/scainfo/sort_star/">별점 순</option>
-            <option value="http://127.0.0.1:8000/scainfo/sort_review/">리뷰 많은 순</option>
-        </select>
-    </div> {% endcomment %}
-
-        {% comment %} <div class="tag" align="left">
-        <form method='post' action='{% url 'hashtag' %}'>
-            {% csrf_token %}
-            <input type="text" name="search_button" placeholder="관련 해시태그 검색 (ex) #노트북존" style="width:300px; background-color: rgb(242, 242, 242)" onfocus="this.placeholder=''" onblur="this.placeholder='관련 해시태그 검색'">
-            <button class="btn btn-primary" type="submit">검색</button>
-        </form>
-        <p></p>
-    </div> {% endcomment %}
-
-        <div class="container">
-            {% for sca in posts %}
-                <div class="card" style="border: 2px solid #734A32;">
-                    <div class="card-body" onclick="location.href='/scainfo/detail/{{sca.id}}'">
-                        {% comment %} <p>{{sca.id}}</p> {% endcomment %}
-                        <h4 class="card-title">{{sca.name}} </h4><div class="like">
-                            <form method='post' action=''>
-                                {% csrf_token %}
-                                <input type="hidden" name="like_button" value="{{sca.id}}">
-                                <span><button id="likebtn" style="border:none; background-color:transparent;"
-                                    type="submit" onclick="btn()"><img class="heartbtn" src="/static/image/heart.png" style="width:30px; height:30px;
-                                    margin-top:10px;"></img></button></span>
-                            </form> </div> <div style="clear:both;"></div>
-                                             
-                        
-                        <p>{{sca.address}}</p>
-                        {% comment %} <p>별점 :
-                            {{sca.star_rating}}</p> {% endcomment %}
-
-                        {%load mathfilters%}
-                        <div class="star-ratings">
-
-                            <div class="star-ratings-fill" style="width:{{sca.star_rating|mul:20}}%">
-                                <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+        <div class="top-bar"
+            style="position: fixed; top: 0;
+                    left: 0;
+                    width: 100%;
+                    background-color: white;
+                    color: #324028;
+                    padding: 10px;
+                    z-index: 9999;
+                    height: 70px;
+                    border-bottom: 1px solid gainsboro;">
+            <a href="/"><img class="home-btn" src="/static/home-img.png"
+                style="display:block; position: absolute; top: 20px; right: 50px; left: 34px; width: 30px; height: 30px; background-size: cover;"/></a>        
+            <h2 style="margin-left: 80px; margin-top: 5px;">찜한 스터디카페 목록</h2>
+        </div>
+        <div class="container" style="margin-top: 150px;">
+            {% comment %}
+            <div class="sort" align="right">
+                <select title="" onchange="window.location.href=this.value">
+                    <option value="http://127.0.0.1:8000/scainfo/all/" selected>기본 순</option>
+                    <option value="http://127.0.0.1:8000/scainfo/sort_star/">별점 순</option>
+                    <option value="http://127.0.0.1:8000/scainfo/sort_review/">리뷰 많은 순</option>
+                </select>
+            </div>
+            {% endcomment %}
+            {% comment %}
+            <div class="tag" align="left">
+                <form method='post' action='{% url 'hashtag' %}'>
+                    {% csrf_token %}
+                    <input type="text" name="search_button" placeholder="관련 해시태그 검색 (ex) #노트북존" style="width:300px; background-color: rgb(242, 242, 242)" onfocus="this.placeholder=''" onblur="this.placeholder='관련 해시태그 검색'">
+                    <button class="btn btn-primary" type="submit">검색</button>
+                </form>
+                <p></p>
+            </div>
+            {% endcomment %}
+            <div class="container">
+                {% for sca in posts %}
+                    <div class="card" style="border: 2px solid #734A32;">
+                        <div class="card-body" onclick="location.href='/scainfo/detail/{{sca.id}}'">
+                            {% comment %} <p>{{sca.id}}</p> {% endcomment %}
+                            <h4 class="card-title">{{sca.name}} </h4><div class="like">
+                                <form method='post' action=''>
+                                    {% csrf_token %}
+                                    <input type="hidden" name="like_button" value="{{sca.id}}">
+                                    <span><button id="likebtn" style="border:none; background-color:transparent;"
+                                        type="submit" onclick="btn()"><img class="heartbtn" src="/static/image/heart.png" style="width:30px; height:30px;
+                                        margin-top:10px;"></img></button></span>
+                                </form> </div> <div style="clear:both;"></div>
+                                                 
+                            
+                            <p>{{sca.address}}</p>
+                            {% comment %} <p>별점 :
+                                {{sca.star_rating}}</p> {% endcomment %}
+    
+                            {%load mathfilters%}
+                            <div class="star-ratings">
+    
+                                <div class="star-ratings-fill" style="width:{{sca.star_rating|mul:20}}%">
+                                    <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+                                </div>
+                                <div class="star-ratings-base">
+                                    <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+                                </div>
                             </div>
-                            <div class="star-ratings-base">
-                                <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
-                            </div>
+    
+                            <p>&nbsp;&nbsp;카카오맵 리뷰({{sca.review}})</p>
+                            {% comment %} <p>영업시간 :
+                                {{sca.time}}</p>
+                            <p>전화번호 :
+                                {{sca.phone_number}}</p> {% endcomment %}
+    
+                                <div>
+                                    {% for hashtag in hashtags %}
+                                        {%if sca.id is hashtag.sca_id%}
+        
+                                            <div class="tag-name">#{{hashtag.name}}</div>
+        
+                                        {%endif%}
+                                    {%endfor%}
+                                </div>
+                                <div style="clear:both;"></div>
+                            {% comment %} <p>찜 :
+                                {{sca.sca_like}}</p> {% endcomment %}
                         </div>
-
-                        <p>&nbsp;&nbsp;카카오맵 리뷰({{sca.review}})</p>
-                        {% comment %} <p>영업시간 :
-                            {{sca.time}}</p>
-                        <p>전화번호 :
-                            {{sca.phone_number}}</p> {% endcomment %}
-
-                            <div>
-                                {% for hashtag in hashtags %}
-                                    {%if sca.id is hashtag.sca_id%}
-    
-                                        <div class="tag-name">#{{hashtag.name}}</div>
-    
-                                    {%endif%}
-                                {%endfor%}
-                            </div>
-                            <div style="clear:both;"></div>
-                        {% comment %} <p>찜 :
-                            {{sca.sca_like}}</p> {% endcomment %}
+                        <p></p>
                     </div>
-                    <p></p>
-                </div>
-                <br></br>
-            {%endfor%}
+                    <br></br>
+                {%endfor%}
+                <p></p>
+                            <div style="text-align: center;">
+                            
+                            {% if posts.has_previous %}
+                                <a href="?page=1" style="text-decoration: none; color: black;">First | </a>
+                                <a href="?page={{posts.previous_page_number}}" style="text-decoration: none; color: black;">Prev </a>
+                            {% endif %}
+                            <span> [ {{posts.number}}</span>
+                            <span>/</span>
+                            <span>{{posts.paginator.num_pages}} ] </span>
+                            {% if posts.has_next %}
+                                <a href="?page={{posts.next_page_number}}" style="text-decoration: none; color: black;"> Next </a>
+                                <a href="?page={{posts.paginator.num_pages}}" style="text-decoration: none; color: black;">| Last</a>
+                            {% endif %}
+                            </div>
+            </div>
             <p></p>
-                        <div style="text-align: center;">
-                        
-                        {% if posts.has_previous %}
-                            <a href="?page=1" style="text-decoration: none; color: black;">First | </a>
-                            <a href="?page={{posts.previous_page_number}}" style="text-decoration: none; color: black;">Prev </a>
-                        {% endif %}
-                        <span> [ {{posts.number}}</span>
-                        <span>/</span>
-                        <span>{{posts.paginator.num_pages}} ] </span>
-                        {% if posts.has_next %}
-                            <a href="?page={{posts.next_page_number}}" style="text-decoration: none; color: black;"> Next </a>
-                            <a href="?page={{posts.paginator.num_pages}}" style="text-decoration: none; color: black;">| Last</a>
-                        {% endif %}
-                        </div>
-                    </div>
-                    <p></p>
-                </body>
-
-                <script>
-                  
-                    
-                    function btn(){
-                        alert("찜 해제!");
-                    }
-                </script>
-
-              
-            </html>
+        </div>
+        <script>
+            function btn(){
+                alert("찜 해제!");
+            }
+        </script>
+    </body>
+</html>
