--- a/cafemapapp/templates/cafemapapp/scamap.html
+++ b/cafemapapp/templates/cafemapapp/scamap.html
@@ -10,7 +10,7 @@
     <body>
         <div class="top-bar">
             <a href="/"><img class="home-btn" src="/static/home-img.png"></a>        
-            <h2>스터디카페 찾기</h2>
+            <h2 style="margin-left: 80px; margin-top: 5px; font-size: 30px; font-weight: 500; line-height: 1.1;">스터디카페 찾기</h2>
         </div>
 
         <div class="container" style="margin-top: 100px;">
