--- a/myPage/templates/myPage.html
+++ b/myPage/templates/myPage.html
@@ -25,25 +25,22 @@
             <div class="whatever">
                 <div class="row posts">
                     <div class="col-3 tile">
-                        <a href=# class="inner" onclick="location.href='/scainfo/like/'"><h4>찜한 스터디카페</h4></a>
-                    </div>
-                    <div class="col-3 tile">
-                        <a href=# class="inner"><h4>찜한 스터디</h4></a>  
-                    </div>
-                    <div class="col-3 tile">
-                        <a href=# class="inner"><h4>참여 스터디</h4></a>
-                    </div>
-                </div>
-                <div class="row posts">
-                    <div class="col-3 tile">
-                        <a href=# class="inner"><h4>개최 스터디</h4></a>
-                    </div>
-                    <div class="col-3 tile">
                         <a href=# class="inner" onclick="location.href='/userlocation/write/'"><h4>위치 등록하기</h4></a> 
                     </div>
                     <div class="col-3 tile">
-                        <a href=# class="inner"><h4>설정</h4></a>
+                        <a href=# class="inner" onclick="location.href='/scainfo/like/'"><h4>찜한 스터디카페</h4></a>
                     </div>
+               
+                </div>
+                <div class="row posts">
+                    <div class="col-3 tile">
+                        <a href=# class="inner"><h4>스터디 개설하기</h4></a>
+                    </div>
+    
+                    <div class="col-3 tile">
+                        <a href=# class="inner"><h4>참여한 스터디</h4></a>
+                    </div>
+            
                 </div>
             </div>
         </article>
