--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -20,11 +20,14 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
         <div class="page-header">
             <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-            <h1><a href="/">스터디 현황</a></h1>
+            <a href="/blog" class="top-menu"><span class="glyphicon glyphicon-align-justify"></span></a>
+            <a href="/" class="top-menu"><span class="glyphicon glyphicon-home"></span></a>
+            <h1><a href="/blog">스터디 현황</a></h1>
         </div>
+
         <div class="content container">
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-8">    
                 {% block content %}
                 {% endblock %}
                 </div>
