스터디개설및신청목록

--- a/myPage/templates/myPage.html
+++ b/myPage/templates/myPage.html
@@ -34,11 +34,11 @@
                 </div>
                 <div class="row posts">
                     <div class="col-3 tile">
-                        <a href=# class="inner"><h4>스터디 개설하기</h4></a>
+                        <a href=# class="inner" onclick="location.href='/blog/post/new'"><h4>스터디 개설하기</h4></a>
                     </div>
     
                     <div class="col-3 tile">
-                        <a href=# class="inner"><h4>참여한 스터디</h4></a>
+                        <a href=# class="inner" onclick="location.href='/blog/join_study/'"><h4>신청한 스터디</h4></a>
                     </div>
             
                 </div>
