--- a/cafemapapp/templates/cafemapapp/scamap.html
+++ b/cafemapapp/templates/cafemapapp/scamap.html
@@ -14,8 +14,19 @@
         </div>
 
         <div class="container" style="margin-top: 100px;">
+
+            <div class="iconlist" style=" position: absolute; top: 90px; right: 15px;">
+                <a href=#>
+                    <img class="cLocation-btn" src="/static/images/cLocation-icon.png" style="width: 40px; height: 40px;">
+                </a>
+                <p></p>
+                <a href="/scainfo/all/">
+                    <img class="List-btn" src="/static/images/List-icon.png" style="width: 40px; height: 40px;">
+                </a>
+            </div>
+
             <div class="studybtn" align="right">
-                <button onclick="location.href='/scainfo/all/'">목록으로 보기</button>
+                <!-- <button onclick="location.href='/scainfo/all/'">목록으로 보기</button> -->
                 {% comment %} <button onclick="location.href='/study/'">개설 스터디 현황</button> {% endcomment %}
             </div>
         </div>
