--- a/scainfoapp/templates/scainfoapp/all.html
+++ b/scainfoapp/templates/scainfoapp/all.html
@@ -25,8 +25,17 @@
                 <h2 style="margin-left: 80px; margin-top: 5px; font-size: 30px; font-weight: 500; line-height: 1.1;">스터디카페 목록</h2>
         </div>
         <div class="whatever" style="margin-top: 100px;">
-            <div class="mapview" align="right">
+            <!-- <div class="mapview" align="right">
                 <button class="mapbtn" onclick="location.href='/scamap/'">지도로 보기</button >
+            </div> -->
+            <div class="iconlist" style=" position: absolute; top: 90px; right: 15px;">
+                <a href="/scamap/">
+                    <img class="cLocation-btn" src="/static/images/Location-icon.png" style="width: 40px; height: 40px;">
+                </a>
+                <p></p> 
+                <a href=#>
+                    <img class="List-btn" src="/static/images/cList-icon.png" style="width: 40px; height: 40px; position: relative; top: 5px;">
+                </a>
             </div>
             <div class="midbar">
                 <div class="tag">
