--- a/cafemapapp/templates/cafemapapp/searchmap.html
+++ b/cafemapapp/templates/cafemapapp/searchmap.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="utf-8">
         <title>스터디카페 찾기</title>
-
         <script src="http://code.jquery.com/jquery-latest.min.js"></script>
         <link rel="stylesheet" href='/static/css/studycafeMap.css'>
     </head>
@@ -14,6 +13,17 @@
         </div>
 
         <div class="container" style="margin-top: 100px;">
+
+            <div class="iconlist" style=" position: absolute; top: 90px; right: 15px;">
+                <a href="/scamap/">
+                    <img class="cLocation-btn" src="/static/images/cLocation-icon.png" style="width: 40px; height: 40px;">
+                </a>
+                <p></p> 
+                <a href=#>
+                    <img class="List-btn" src="/static/images/List-icon.png" style="width: 40px; height: 40px; position: relative;">
+                </a>
+            </div>
+
             <div class="studybtn" align="right">
                 <button onclick="location.href='/scainfo/all/'">목록으로 보기</button>
                 {% comment %} <button onclick="location.href='/study/'">개설 스터디 현황</button> {% endcomment %}
