--- a/scainfoapp/templates/scainfoapp/sort_star.html
+++ b/scainfoapp/templates/scainfoapp/sort_star.html
@@ -2,114 +2,133 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,
-    initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>스터디카페 목록</title>
         <link rel="stylesheet" href='/static/css/home.css'>
         <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     </head>
     <body>
-        <div class="home">
-        <a href="/"><img class="homebtn" src="/static/images/homebtn.png"/></a></div>
-        <h2 style="text-align: center;">스터디카페 목록</h2>
-        
-        <div class="mapview" align="right">
-            <button class="mapbtn" onclick="location.href='/scamap/'">지도로 보기</button >
+        <div class="top-bar"
+            style="position: fixed; top: 0;
+                    left: 0;
+                    width: 100%;
+                    background-color: white;
+                    color: #324028;
+                    padding: 10px;
+                    z-index: 9999;
+                    height: 70px;
+                    border-bottom: 1px solid gainsboro;">
+            <a href="/"><img class="home-btn" src="/static/home-img.png"
+                style="display:block; position: absolute; top: 20px; right: 50px; left: 34px; width: 30px; height: 30px; background-size: cover;"/></a>        
+                <h2 style="margin-left: 80px; margin-top: 5px; font-size: 30px; font-weight: 500; line-height: 1.1;">스터디카페 목록</h2>
         </div>
-        
-        <div class="midbar">
-        <div class="sort" align="right">
-            <select title="" onchange="window.location.href=this.value">
-                <option id="a" value="/scainfo/all/">기본 순</option>                
-                <option id="b" value="/scainfo/sort_star/" selected>별점 순</option>
-                <option id="c" value="/scainfo/sort_review/">리뷰 많은 순</option>
-            </select>
-        </div>
-
-        <div class="tag" align="left">
-        <form method='post' action='{% url 'hashtag' %}'>
-            {% csrf_token %}
-            <input type="text" class ="btn" name="search_button" placeholder="관련 해시태그 검색 (ex) #노트북존" style="width:300px; background-color: rgb(242, 242, 242); border: 1px solid #DDDDDD;" onfocus="this.placeholder=''" onblur="this.placeholder='관련 해시태그 검색'">
-            <button class="btn text-white" style="background-color:#324028;" type="submit">검색</button>
-        </form>
-        <p></p>
-    </div><div style="clear:both;"></div>
-</div>
-
-        <div class="container">
-            {% for sca in posts %}
-                <div class="card" style="border: 2px solid #734A32; border-radius:10px;">
-                    <div class="card-body" onclick="location.href='/scainfo/detail/{{sca.id}}'">
-                        <h4 class="card-title">{{sca.name}} </h4><div class="like" align="right">
-                            <form method='post' action=''>
-                                {% csrf_token %}
-                                <input type="hidden" name="like_button" value="{{sca.id}}">
-                                <span><button id="likebtn" style="border:none; background-color:transparent;"
-                                    type="submit" onclick="btn()"><img class="heartbtn" src="/static/image/heart.png" style="width:30px; height:30px;
-                                    margin-top:10px;"></img></button></span>
-                            </form> </div><div style="clear:both;"></div>
-                                             
-                        
-                        <p>{{sca.address}}</p>
-                        {% comment %} <p>별점 :
-                            {{sca.star_rating}}</p> {% endcomment %}
-
-                        {%load mathfilters%}
-                        <div class="star-ratings">
-
-                            <div class="star-ratings-fill" style="width:{{sca.star_rating|mul:20}}%">
-                                <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
-                            </div>
-                            <div class="star-ratings-base">
-                                <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
-                            </div>
-                        </div>
-
-                        <p>&nbsp;&nbsp;카카오맵 리뷰({{sca.review}})</p>
-                        {% comment %} <p>영업시간 :
-                            {{sca.time}}</p>
-                        <p>전화번호 :
-                            {{sca.phone_number}}</p> {% endcomment %}
-
-                            <div>
-                                {% for hashtag in hashtags %}
-                                    {%if sca.id is hashtag.sca_id%}
+        <div class="whatever" style="margin-top: 100px;">
+            <!-- <div class="mapview" align="right">
+                <button class="mapbtn" onclick="location.href='/scamap/'">지도로 보기</button >
+            </div> -->
+            <div class="iconlist" style=" position: absolute; top: 90px; right: 15px;">
+                <a href="/scamap/">
+                    <img class="cLocation-btn" src="/static/images/Location-icon.png" style="width: 40px; height: 40px;">
+                </a>
+                <p></p> 
+                <a href=#>
+                    <img class="List-btn" src="/static/images/cList-icon.png" style="width: 40px; height: 40px; position: relative; top: 5px;">
+                </a>
+            </div>
+            <div class="midbar">
+            <div class="sort" align="right">
+                <select title="" onchange="window.location.href=this.value">
+                    <option id="a" value="/scainfo/all/">기본 순</option>                
+                    <option id="b" value="/scainfo/sort_star/" selected>별점 순</option>
+                    <option id="c" value="/scainfo/sort_review/">리뷰 많은 순</option>
+                </select>
+            </div>
     
-                                        <div class="tag-name">#{{hashtag.name}}</div>
-    
-                                    {%endif%}
-                                {%endfor%}
-                            </div>
-                            <div style="clear:both;"></div>
-                        {% comment %} <p>찜 :
-                            {{sca.sca_like}}</p> {% endcomment %}
-                    </div>
-                    <p></p>
-                </div>
-                <br>
-            {%endfor%}
+            <div class="tag" align="left">
+            <form method='post' action='{% url 'hashtag' %}'>
+                {% csrf_token %}
+                <input type="text" class ="btn" name="search_button" placeholder="관련 해시태그 검색 (ex) #노트북존" style="width:300px; background-color: rgb(242, 242, 242); border: 1px solid #DDDDDD;" onfocus="this.placeholder=''" onblur="this.placeholder='관련 해시태그 검색'">
+                <button class="btn text-white" style="background-color:#324028;" type="submit">검색</button>
+            </form>
             <p></p>
-            <div style="text-align: center;">
-                        
-                {% if posts.has_previous %}
-                    <a href="?page=1" style="text-decoration: none; color: black;">First | </a>
-                    <a href="?page={{posts.previous_page_number}}" style="text-decoration: none; color: black;">Prev </a>
-                {% endif %}
-                <span> [ {{posts.number}}</span>
-                <span>/</span>
-                <span>{{posts.paginator.num_pages}} ] </span>
-                {% if posts.has_next %}
-                    <a href="?page={{posts.next_page_number}}" style="text-decoration: none; color: black;"> Next </a>
-                    <a href="?page={{posts.paginator.num_pages}}" style="text-decoration: none; color: black;">| Last</a>
-                {% endif %}
-                </div>
+        </div><div style="clear:both;"></div>
+    </div>
+    
+            <div class="container">
+                {% for sca in posts %}
+                    <div class="card" style="border: 2px solid #734A32; border-radius:10px;">
+                        <div class="card-body" onclick="location.href='/scainfo/detail/{{sca.id}}'">
+                            <h4 class="card-title">{{sca.name}} </h4><div class="like" align="right">
+                                <form method='post' action=''>
+                                    {% csrf_token %}
+                                    <input type="hidden" name="like_button" value="{{sca.id}}">
+                                    <span><button id="likebtn" style="border:none; background-color:transparent;"
+                                        type="submit" onclick="btn()"><img class="heartbtn" src="/static/image/heart.png" style="width:30px; height:30px;
+                                        margin-top:10px;"></img></button></span>
+                                </form> </div><div style="clear:both;"></div>
+                                                 
+                            
+                            <p>{{sca.address}}</p>
+                            {% comment %} <p>별점 :
+                                {{sca.star_rating}}</p> {% endcomment %}
+    
+                            {%load mathfilters%}
+                            <div class="star-ratings">
+    
+                                <div class="star-ratings-fill" style="width:{{sca.star_rating|mul:20}}%">
+                                    <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+                                </div>
+                                <div class="star-ratings-base">
+                                    <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+                                </div>
+                            </div>
+    
+                            <p>&nbsp;&nbsp;카카오맵 리뷰({{sca.review}})</p>
+                            {% comment %} <p>영업시간 :
+                                {{sca.time}}</p>
+                            <p>전화번호 :
+                                {{sca.phone_number}}</p> {% endcomment %}
+    
+                                <div>
+                                    {% for hashtag in hashtags %}
+                                        {%if sca.id is hashtag.sca_id%}
+        
+                                            <div class="tag-name">#{{hashtag.name}}</div>
+        
+                                        {%endif%}
+                                    {%endfor%}
+                                </div>
+                                <div style="clear:both;"></div>
+                            {% comment %} <p>찜 :
+                                {{sca.sca_like}}</p> {% endcomment %}
+                        </div>
+                        <p></p>
                     </div>
-                    <p></p>
-
-                    <script>
-                        function btn(){
-                            alert("찜 완료");}
-                    </script>
-                </body>
-            </html>
+                    <br>
+                {%endfor%}
+                <p></p>
+                <div style="text-align: center;">
+                            
+                    {% if posts.has_previous %}
+                        <a href="?page=1" style="text-decoration: none; color: black;">First | </a>
+                        <a href="?page={{posts.previous_page_number}}" style="text-decoration: none; color: black;">Prev </a>
+                    {% endif %}
+                    <span> [ {{posts.number}}</span>
+                    <span>/</span>
+                    <span>{{posts.paginator.num_pages}} ] </span>
+                    {% if posts.has_next %}
+                        <a href="?page={{posts.next_page_number}}" style="text-decoration: none; color: black;"> Next </a>
+                        <a href="?page={{posts.paginator.num_pages}}" style="text-decoration: none; color: black;">| Last</a>
+                    {% endif %}
+                    </div>
+                        </div>
+                        <p></p>
+        </div>
+        <script>
+                    function btn(){
+                        alert("찜 완료");
+                    }
+        </script>
+    </body>
+</html>
