--- a/blog/templates/blog/baseone.html
+++ b/blog/templates/blog/baseone.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>스터디 현황</title>
+        <title>스터디 신청 현황</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -22,7 +22,7 @@
             <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
             <a href="/blog" class="top-menu"><span class="glyphicon glyphicon-align-justify"></span></a>
             <a href="/" class="top-menu"><span class="glyphicon glyphicon-home"></span></a>
-            <h1><a href="/blog">스터디 신청 현황</a></h1>
+            <h1><a href="/blog">신청한 스터디</a></h1>
         </div>
 
         <div class="content container">
