--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,8 +3,8 @@
         {% for post in paginated_list %}
             <div class="post">
                 <div class="d-grid gap-3">
-                <div class="card" style="width: 30rem;">
-                    <div class="card-header">
+                <div class="card" style="width: 50rem;">
+                    <div class="card-header" style="background-color:#D9D1C7;">
                         <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
                         <h5>글쓴이: {{ post.author }}</h5>
                     </div>
